@@ -9,6 +9,7 @@ v1.0.1 - Pending
 	+ Bug: Info window freezes when editing currently playing song's tags
 	+ Bug: Prevent strange potential freeze with gc.collect()
 	+ Bug: Cover art doesn't update correctly if Local Only artwork set
+	+ Bug: Lyrics occassionally don't stay synced with current playing song
 
 v1.0 - January 21, 2006
 	+ Multiple views for library: filesystem, artists, albums
